--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.6",
+    "leancloud-storage": "^3.10.0",
     "marked": "^0.5.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
